# MaaQKS

./: .gitignore  dev_layout.kdl  main.py  pyproject.toml
.github/workflows/: install.yml
assets/: interface.json
assets/resource/: default_pipeline.json
assets/resource/pipeline/: 大世界-抽卡房间切换.json  我是古战场超人.json  我要住在使徒家.json  我要住在素材本.json  纯纯跳过工具人.json  统一补充体力.json
